--- a/assets/style.css
+++ b/assets/style.css
@@ -40,6 +40,7 @@ body {
 
 .social-link img {
 	width: 20px;
+	height: auto;
 }
 
 #about {
@@ -69,10 +70,11 @@ body {
 
 .picture img {
 	width: 100%;
+	height: auto;
 
 }
 #about-me {
-	flex: 2
+	flex: 2;
 }
 .about-me__title {
 	margin-top: 1em;
@@ -80,6 +82,7 @@ body {
 	font-size: 30px;
 }
 .about-me__introduction {
+	font-size: 1.3em;
 	font-family: 'Spectral';
 	font-weight: 800;
 	font-style: italic;
@@ -87,12 +90,20 @@ body {
 }
 #about-me p {
 	width: 80%;
-	font-size: 14px;
+	font-size: 1em;
 }
 
-#gallery {
-	/*	min-height: 100vh; */
+#gallery img{
+	width: 100%;
+
 }
+
+#myAwesomeLightbox.show {
+	display: flex !important;
+	align-items: center;
+	overflow-y: hidden;
+}
+
 .title{
 	text-align: center;
 	padding-block: 2em;
@@ -100,8 +111,8 @@ body {
 .gallery .nav {
 	justify-content: center;
 }
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #fff;
+.nav-pills .nav-link.active-tag, .nav-pills .show > .nav-link {
+	color: #000;
 	background-color: #BEB45A;
 	border-radius:0 ;
 }
@@ -198,7 +209,7 @@ body {
 	padding-block: 100px;
 }
 
-#contact .container {
+#contact-form .container {
 	display: flex;
 }
 .picture.right::before {
@@ -244,6 +255,21 @@ input[type="submit"] {
 	padding: .5em 1em
 }
 
+.service__description h3{
+	font-size: calc(1.3rem + 0.6vw);
+	margin-top: 0;
+	margin-bottom: 0.5rem;
+	font-weight: 500;
+	line-height: 1.2;
+}
+.service__price h3 {
+	font-size: calc(1.275rem + 0.3vw);
+	margin-top: 0;
+	margin-bottom: 0.5rem;
+	font-weight: 500;
+	line-height: 1.2;
+}
+
 @media all and (max-width: 1180px) {
 	.picture {
 		flex : 2;
@@ -259,6 +285,7 @@ input[type="submit"] {
 		width: 100%;
 	}
 }
+
 
 @media all and (max-width: 1000px) {
 	#about{
@@ -293,7 +320,6 @@ input[type="submit"] {
 	.service__description{
 		margin-bottom: 1em;
 	}
-
 	#services .container::before{
 		width: 30%;
 		height: 100%;
@@ -317,6 +343,7 @@ input[type="submit"] {
 		right: 0;
 		z-index: -1;
 	}
+
 }
 
 @media all and (max-width: 650px) {
@@ -352,5 +379,28 @@ input[type="submit"] {
 	.picture {
 		width: 80%;
 	}
+
+	#info-location .container{
+		display: flex;
+		flex-direction: column;
+	}
+}
+.carousel-item img {
+	width: 100% !important;
+	height: auto;
+
+}
+#info-location .information {
+	padding-top: 1%;
+	max-width: fit-content;
 }
 
+#info-location .container{
+	display: flex;
+	flex-direction: column;
+}
+#info-location .information {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
